--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@ function openWebsite(websiteName) {
                    google:'Google is a multinational technology company that specializes in internet-related services and products, including search, advertising, cloud computing, and software development.',
                  facebook: 'Facebook is a social networking platform that allows users to connect with friends and family, share updates, and engage with content.',
      apotato: 'Potato is God of vegetables',
-                    default: 'I don\'t have information about that topic.Please give feedback and data  as i can't manually have data nor i use a api key '
+                    default: 'I don\'t have information about that topic.Please give feedback and data  as i can\'t manually have data nor i use a api key '
                 }
             };
 
